--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "openai": "^6.6.0",
     "pdf2json": "^4.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
